--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Blinds"></activity>
+        <activity
+            android:name=".Blinds"
+            android:configChanges="screenLayout|orientation|screenSize"
+            ></activity>
     </application>
 
 </manifest>
