Ahi va la cagada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:theme="@style/AppThemeLight">
         <activity
             android:name=".Home"
-            android:configChanges="screenLayout|orientation|screenSize"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Devices" android:configChanges="screenLayout|orientation|screenSize"></activity>
+        <activity
+            android:name=".Devices"
+            android:configChanges="screenLayout|orientation|screenSize">
+        </activity>
 
         <activity
             android:name=".SettingsActivity"
