--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Devices"
-            android:configChanges="screenLayout|orientation|screenSize">
-        </activity>
 
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppThemeLight"></activity>
+        <activity
+            android:name=".DeviceActivity"
+            android:label="@string/title_activity_device"
+            android:theme="@style/AppThemeLight"
+            android:configChanges="screenLayout|orientation|screenSize"></activity>
     </application>
 
 </manifest>
