--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.github.skydoves:colorpickerpreference:1.0.5'
+    implementation 'org.adw.library:discrete-seekbar:1.0.1'
 
 }
