--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.github.skydoves:colorpickerpreference:1.0.5'
     implementation 'org.adw.library:discrete-seekbar:1.0.1'
 
+    implementation 'com.pes.materialcolorpicker:library:1.2.4'
+
 }
